# VirtaParser

./: .gitignore  CMakeLists.txt  build.sh  markets.sh  run.sh
src/: company.cpp  company.h  gitexp.h  menu.cpp  retail.cpp  retail.h  unit.cpp  unit.h  virta.cpp  virta.h
